<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">佔棋</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start">開始遊戲</string>
    <string name="old">開啟舊檔</string>
    <string name="leave">離開</string>
    <string name="cancelChoose">取消\n選取</string>
    <string name="skill">技能</string>
    <string name="useSkill">施放\n技能</string>
    <string name="move">步數</string>
    <string name="walk">移動\n角色</string>
    <string name="end_round">結束回合</string>
    <string name="end_put">結束放棋</string>
    <string name="red_player">紅方</string>
    <string name="blue_player">藍方</string>
    <string name="chess">角色</string>
    <string name="left_number">剩餘</string>
    <string name="skillRange">技能\n範圍</string>
    <string name="skillCost">技能\n耗點</string>
    <string name="moveRange">移動\n範圍</string>
    <string name="setting">設定</string>
    <string name="Finish">結束</string>
    <string name="surrender">投降</string>
    <string name="backtogame">返回</string>
    <string name="music">音樂：</string>
    <string name="save">儲存</string>
    <string name="quickstart">快速開始</string>
</resources>
