<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/music"
            ></TextView>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:background="@color/holo_red_light"
            android:textOff="turn off"
            android:textOn="turn on"
            android:id="@+id/bgmusic"
            tools:ignore="MissingConstraints">

        </ToggleButton>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/backtogame"
            android:id="@+id/backgame">

        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/surrender"
            android:id="@+id/surrender"
            ></Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>