<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playChess"
    android:layout_width="273dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/player_red"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_red_light"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/red_player"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/skill"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="30"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/move"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="4"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_blue"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_blue_bright"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/blue_player"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/skill"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="30"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/move"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="4"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chess_menu"
        android:layout_width="273dp"
        android:layout_height="213dp"
        android:background="@android:color/holo_green_light"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chess_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chess"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/use_Skill"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="72dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@android:color/darker_gray"
                android:text="@string/useSkill"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/move_chess"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="72dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@android:color/darker_gray"
                android:text="@string/walk"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Cancel_click"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="72dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@android:color/darker_gray"
                android:text="@string/cancelChoose"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/chess_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="我有做一個滾動的效果，只要字夠多滾動效果就會出現。另外我剛剛有試過反斜線N會換行，所以這邊文字可以一堆(?)，\n\n現在這行開始在撐字數"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/game_timer"
        android:text="30"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_orange_light"
        />

    <LinearLayout
        android:id="@+id/end_round"
        android:layout_width="273dp"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/end_round_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_purple"
            android:text="@string/end_round"
            android:textSize="25sp" />
        <!--save/load test button
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/holo_purple"
            android:text="save"
            android:textSize="25sp" />
        <Button
            android:id="@+id/load_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/holo_purple"
            android:text="load"
            android:textSize="25sp" />
            -->
    </LinearLayout>

</LinearLayout>