<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/putChess"
    android:layout_width="273dp"
    android:layout_height="match_parent"
    android:orientation="vertical">
    //choose chess menu

    <LinearLayout
        android:id="@+id/choose_chess"
        android:layout_width="273dp"
        android:layout_height="100dp"
        android:background="@color/darker_gray"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/yellow">
                //auro

                <LinearLayout
                    android:id="@+id/jet"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Jet_button"
                        android:layout_width="58dp"
                        android:layout_height="59dp"
                        android:background="@drawable/auro"></Button>

                    <TextView
                        android:id="@+id/Jet_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="4"
                        android:textSize="10sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>
                </LinearLayout>
                //rock

                <LinearLayout
                    android:id="@+id/rock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Rock_button"
                        android:layout_width="58dp"
                        android:layout_height="59dp"
                        android:background="@drawable/rock"></Button>

                    <TextView
                        android:id="@+id/Rock_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="4"
                        android:textSize="10sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>
                </LinearLayout>
                //clip

                <LinearLayout
                    android:id="@+id/clip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Clip_button"
                        android:layout_width="58dp"
                        android:layout_height="59dp"
                        android:background="@drawable/clip"></Button>

                    <TextView
                        android:id="@+id/Clip_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="4"
                        android:textSize="10sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>
                </LinearLayout>
                //horse

                <LinearLayout
                    android:id="@+id/horse"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Horse_button"
                        android:layout_width="58dp"
                        android:layout_height="59dp"
                        android:background="@drawable/horse"></Button>

                    <TextView
                        android:id="@+id/Horse_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="4"
                        android:textSize="10sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>
                </LinearLayout>
                //hercules

                <LinearLayout
                    android:id="@+id/hercules"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Hercules_button"
                        android:layout_width="58dp"
                        android:layout_height="59dp"
                        android:background="@drawable/hercules"></Button>

                    <TextView
                        android:id="@+id/Hercules_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="4"
                        android:textSize="10sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>
                </LinearLayout>
                //rhin

                <LinearLayout
                    android:id="@+id/rhino"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Rhino_button"
                        android:layout_width="58dp"
                        android:layout_height="59dp"
                        android:background="@drawable/rhinoceros"></Button>

                    <TextView
                        android:id="@+id/Rhino_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="4"
                        android:textSize="10sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>
                </LinearLayout>
                //spy

                <LinearLayout
                    android:id="@+id/spy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Spy_button"
                        android:layout_width="58dp"
                        android:layout_height="59dp"
                        android:background="@drawable/spy"></Button>

                    <TextView
                        android:id="@+id/Spy_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="4"
                        android:textSize="10sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>
                </LinearLayout>
                //tower

                <LinearLayout
                    android:id="@+id/tower"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/TransferTower_button"
                        android:layout_width="58dp"
                        android:layout_height="59dp"
                        android:background="@drawable/tower"></Button>

                    <TextView
                        android:id="@+id/TransferTower_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="4"
                        android:textSize="10sp"
                        android:background="@color/black"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>
    //left number

    <LinearLayout
        android:id="@+id/left_number"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:background="@color/holo_orange_light"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/left_number"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="15"
            android:textSize="25sp" />

    </LinearLayout>
    //chess information for put chess

    <LinearLayout
        android:id="@+id/chess_menu"
        android:layout_width="273dp"
        android:layout_height="213dp"
        android:background="@color/light_green"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chess_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chess"
            android:textSize="30sp" />
        //chess information table

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/skillCost"
                    android:background="@color/holo_green_dark"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="85dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/holo_green_dark"
                    android:textColor="@android:color/white"
                    android:text="1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/holo_green_dark"
                    android:textColor="@android:color/white"
                    android:text="@string/skillRange"
                    android:textSize="15sp" />

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="85dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/holo_green_dark"
                    android:textColor="@android:color/white"
                    android:text="1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/holo_green_dark"
                    android:textColor="@android:color/white"
                    android:text="@string/moveRange"
                    android:textSize="15sp" />

                <TextView
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="85dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/holo_green_dark"
                    android:textColor="@android:color/white"
                    android:text="1"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
        //chess information description
        <TextView
            android:id="@+id/message_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="我有做一個滾動的效果，只要字夠多滾動效果就會出現。另外我剛剛有試過反斜線N會換行，所以這邊文字可以一堆(?)，\n\n現在這行開始在撐字數"
            android:textSize="18sp" />
    </LinearLayout>

    //timer for putting chess

    <TextView
        android:id="@+id/put_timer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/holo_purple"
        android:orientation="horizontal"></TextView>

</LinearLayout>
